return_value
  File "readfile.py", line 13
    else
       ^
SyntaxError: invalid syntax
